--- a/PropWare.dox
+++ b/PropWare.dox
@@ -256,7 +256,7 @@
                 </ul>
             </li>
 
-            <li>Create a Makefile for the project (see any of the Demo projects for examples)</li>
+            <li>Create a Makefile for your project, following the template set under the PropWare_Demos directory</li>
 
             <li>Create a "Debug" folder in the project directory and run "make -f ../Makefile" within it
                 <ul>
@@ -274,6 +274,13 @@
             <li>When you are ready to install the program to the Propeller's EEPROM, the "install" target will load your
                 executable into both EEPROM and RAM and then begin execution: "make -f ../Makefile install"
             </li>
+        </ol>
+    </li>
+
+    <!-- Importing Examples -->
+    <li>Importing Example Projects:
+        <ol>
+            <li>Coming momentarily...</li>
         </ol>
     </li>
 </ul>
