Fix example project doxygen hierarchy; Copy and modify a demo from Parallax to demonstrate the helpfulness of PropWare

--- a/PropWare.dox
+++ b/PropWare.dox
@@ -1,4 +1,5 @@
-/** @mainpage PropWare v1.1 Documentation
+/**
+@mainpage PropWare v1.1 Documentation
 @htmlonly
 
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
