--- a/PropWare.dox
+++ b/PropWare.dox
@@ -40,9 +40,29 @@
                          target="_blank">here</a>.
 </p>
 
-<h2>Getting Started</h2>
+<h2>Contents</h2>
+<ol>
+    <li>
+        <a href="#gettingStarted">Getting Started</a>
+        <ol>
+            <li><a href="#getStart_PreReq">Prerequisites</a></li>
+            <li><a href="#getStart_BuildLib">Building the PropWare Static Libraries</a></li>
+            <li><a href="#getStart_Deploy">Deploying a PropWare Application</a></li>
+        </ol>
+    </li>
 
-<h3>Prerequisites</h3>
+    <li>
+        <a href="#contribute">Developing and Contributing to PropWare</a>
+    </li>
+
+    <li>
+        <a href="#usefulLinks">Useful Links</a>
+    </li>
+</ol>
+
+<h2 id="gettingStarted">Getting Started</h2>
+
+<h3 id="getStart_PreReq">Prerequisites</h3>
 
 <ul>
     <li>
@@ -179,7 +199,7 @@
     </li>
 </ul>
 
-<h3>Building the PropWare Static Libraries</h3>
+<h3 id="getStart_BuildLib">Building the PropWare Static Libraries</h3>
 
 <ul>
     <li>Enter the PropWare root directory at the command line</li>
@@ -189,7 +209,7 @@
     </li>
 </ul>
 
-<h3>Deploying a PropWare application</h3>
+<h3 id="getStart_Deploy">Deploying a PropWare application</h3>
 
 <p>PropWare makes building and running applications very easy. Below are three different methods for building and
     deploying a PropGCC application using PropWare.</p>
@@ -315,7 +335,12 @@
     </li>
 </ul>
 
-<h2>Useful links</h2>
+<h2 id="contribute">Developing and Contributing to PropWare</h2>
+<p>PropWare is developed by David Zemon.</p>
+<p>Contributions can be made by either <a target="_blank" href="http://david.zemon.name/professional/contact.shtml">
+contacting David Zemon</a> or forking the repository and creating a pull request.</p>
+
+<h2 id="usefulLinks">Useful links</h2>
 
 <ul>
     <li>Source code: <a href="https://github.com/SwimDude0614/PropWare"
