--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 PropWare README
 Author:    David Zemon
-Purpose:   Generic C library files for the Parallax Propeller Microcontroller
+Purpose:   Generic C++ library files for the Parallax Propeller Microcontroller
 
 Please find full documentation here:
 http://david.zemon.name/professional/PropWare/docs/html/
