Update Doxygen config and documentation

--- a/PropWare.dox
+++ b/PropWare.dox
@@ -2,6 +2,7 @@
 @mainpage PropWare v2.0 Documentation - Nightly
 @htmlonly
 
+<!--suppress HtmlUnknownTarget -->
 <p>
     Download PropWare <a href="https://github.com/SwimDude0614/PropWare"
                          target="_blank">here</a> for source code or <a
